Fix displaying non-Unicode primitive svg images in Dark Mode

--- a/addon/web/styles.css
+++ b/addon/web/styles.css
@@ -117,6 +117,12 @@ body.dark {
 	color: #fff;
 }
 
+body.ankidroid_dark_mode,
+body.nightMode,
+body.dark img {
+	filter: invert(99%) sepia(50%) saturate(2%) hue-rotate(181deg) brightness(114%) contrast(101%);
+}
+
 .meanings__title,
 .keyword-and-meaning__keyword,
 h3,
@@ -2176,7 +2182,13 @@ button.primitive {
 }
 
 button.primitive img {
-	filter: invert(99%) sepia(50%) saturate(2%) hue-rotate(181deg) brightness(114%) contrast(101%)
+	filter: invert(99%) sepia(50%) saturate(2%) hue-rotate(181deg) brightness(114%) contrast(101%);
+}
+
+.ankidroid_dark_mode button.primitive,
+.nightMode button.primitive,
+.dark button.primitive img {
+	filter: invert(19%) sepia(7%) saturate(2109%) hue-rotate(184deg) brightness(88%) contrast(81%);
 }
 
 button.primitive:hover,
